# sistema_vigilancia

./: .env  .gitignore  NOTAS_PARA_AGENTES_2026-06-05.txt  README.md  main.py  push-labcam-dual.service  push_labcam_dual.sh  pyproject.toml  untitled-planCameraEditConflict.prompt.md  ycopg2
Script/: controller_ptz.py  pyproject.toml
apicentral/: .env.example  README.md  pyproject.toml
apicentral/app/: main.py
apicentral/app/api/: deps.py
apicentral/app/api/routes/: admin.py  arcom.py  auth.py  mediamtx.py  osint.py  server.py  streams.py  telemetry.py
apicentral/app/core/: config.py  encryption.py  security.py
apicentral/app/db/: session.py
apicentral/app/models/: entities.py
apicentral/app/schemas/: auth.py  common.py  stream.py  telemetry.py
apicentral/app/services/: arcom_service.py  auth_service.py  osint_service.py  permission_service.py  stream_service.py
apicentral/app/utils/: geojson_helpers.py
dashboard/: .env.example  README.md  pyproject.toml
dashboard/app/: config.py
dashboard/back/: __init__.py
dashboard/back/app/: application.py  config.py  context.py  main.py  state.py
dashboard/back/app/core/: __init__.py  helpers.py
dashboard/back/app/data/: clip_telegram_notifier_state.json  notification_settings.json
dashboard/back/app/domain/: __init__.py  device_catalog.py  empresa.py  rbox.py
dashboard/back/app/mediamtx/: sync_stream_status.py
dashboard/back/app/routers/: __init__.py  auth.py  cameras.py  data.py  events.py  notifications.py  org.py  pages.py  proxy.py  vehicles.py
dashboard/back/app/services/: api_client.py  catalog.py  conection_sql_postgrest.py  db_pool.py  db_telegram_feeder.py  manifest_sftp_reader.py  media_ingest_service.py  module_conect_ssh.py  notification_settings.py  plate_lookup_client.py  plate_lookup_sync_worker.py  remote_clip_telegram_notifier.py  remote_detection_feed.py  remote_file_watcher.py  (+5 more)
dashboard/back/data/: manifest_ingest_state.json
dashboard/back/tests/: test_alert_pipeline.py
dashboard/front/static/: app.js  camera_admin_fallback.js  cameras_page_viewer.js  perfil.css  style_alarmas.css  styles.css  web_app.css  web_app.js
dashboard/front/templates/: camaras.html  eventos.html  index.html  login.html  mapa.html  notificaciones.html  perfil.html  registro_vehiculos.html  registros.html  usuarios.html
(+142 files in other folders)
