[project]
name = "proyecto-monitoreo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "aiortc>=1.14.0",
    "av>=16.1.0",
    "cv>=1.0.0",
    "easyocr>=1.7.2",
    "faiss-cpu>=1.13.2",
    "insightface>=0.7.3",
    "numpy>=2.2.6",
    "onnxruntime-gpu>=1.24.2",
    "opencv-python>=4.13.0.92",
    "opencv-python-headless>=4.13.0.92",
    "pyyaml>=6.0.2",
    "ultralytics>=8.4.16",
]
